--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+title: mulious's Homepage
+page-top-title: mulious
+top-section-bg-text: USTC管统学习资料
+home-subtitle: USTC管统学习资料
+copyright-text: '&copy; mulious 2023-2025. All Rights Reserved.'
